organization, spelling, and deployment

--- a/content/blog/2024/.deployment.md
+++ b/content/blog/2024/.deployment.md
@@ -1,6 +1,6 @@
 ---
 title: Blog Deployment Steps
-description: "Steps for deploying this blog to vercel"
+description: "Steps for deploying this blog via Vercel"
 topic: Development
 isToc: true
 createDate: 2024-08-12
