--- a/content/blog/2024/.blogCostBreakdown.md
+++ b/content/blog/2024/.blogCostBreakdown.md
@@ -1,10 +1,10 @@
 ---
-title: Route 53 Name Servers DNS Issues
-description: Some troubleshooting for resolving a Route53 custom domain issue with a AWS Certificate Manager 'Validation Timed Out'
+title: Blog Cost Breakdown
+description: An analysis of AWS costs for a CICD deploy of a Nuxt 3 Vue Static Site blog
 topic: Ops
 isToc: true
 version: 1.0
-createDate: 2024-09-24 
+createDate: 2024-10-4 
 createAuthor: John Pennock
 image: '/images/blog/AWSCertificateIssued.jpg'
 imageAlt: An AWS Certificate successfully issued
@@ -53,7 +53,7 @@ I picked 'Use DNS' because it was the recommended default and I figured that wit
 
 ### Learning - Create Cert Records
 
-In trying to troubleshoot my troubleshooting step of creating a certificate where my 'Validation Timed Out', I thought a bit more about the two options - 'Use DNS' or 'Use Email'.  While I was fairly certain I could use the Email validation, it would mask the problem. What wasn't clear to me is how 'Use DNS' worked. I thought that it was just going to make sure my AWS account owned the Custom Domain. What really is happening is that it attempts reach  your Custom Domain CNAME record of the same number as the certificate. Only then are you 'validated'. This should take minutes not days or hours.
+In trying to troubleshoot my troubleshoot step of creating a certificate where my 'Validation Timed Out', I thought a bit more about the two options - 'Use DNS' or 'Use Email'.  While I was fairly certain I could use the Email validation, it would mask the problem. What wasn't clear to me is how 'Use DNS' worked. I thought that it was just going to make sure my AWS account owned the Custom Domain. What really is happening is that it attempts reach  your Custom Domain CNAME record of the same number as the certificate. Only then are you 'validated'. This should take minutes not days or hours.
 
 Fortunately, there is a 'button' in the certificate details page for creating the matching CNAME records in your custom domain hosted Zone. It *should* have been documented somewhere that you are *required* to do this in order for validation to succeed.  Remember to push the button!
 
